--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 
         <fabric8.openshift.trimImageInContainerSpec>true</fabric8.openshift.trimImageInContainerSpec>
         <spring-boot.version>1.5.12.RELEASE</spring-boot.version>
+        <spring.version>4.3.16.RELEASE</spring.version>
         <camel.version>2.21.1</camel.version>
         <feign.version>9.5.0</feign.version>
     </properties>
@@ -60,6 +61,7 @@
     <modules>
 		<module>camel-feed-provider</module>
 		<module>camel-feed-action</module>
+        <module>camel-openwhisk</module>
 	</modules>
 
 </project>
