--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
 		<module>camel-feed-provider</module>
 		<module>camel-feed-action</module>
         <module>camel-openwhisk</module>
+        <module>camel-function</module>
 	</modules>
 
 </project>
