--- a/openwhisk-runtime-camel/proxy/build.gradle
+++ b/openwhisk-runtime-camel/proxy/build.gradle
@@ -14,7 +14,7 @@ dependencies {
         exclude group: 'com.sun.xml.bind'
     }
     compile 'org.slf4j:slf4j-api:1.7.25'
-    compile 'org.slf4j:slf4j-nop:1.7.25'
+    compile 'org.slf4j:slf4j-simple:1.7.25'
 }
 
 jar {
